--- a/po/sv.po
+++ b/po/sv.po
@@ -1,5 +1,6 @@
 # Swedish translation for libexif
 # Copyright © 2007, 2009, 2016, 2022 Free Software Foundation, Inc.
+# SPDX-License-Identifier: LGPL-2.0-or-later
 # This file is distributed under the same license as the libexif package.
 # Daniel Nylander <po@danielnylander.se>, 2007, 2009.
 # Sebastian Rasmussen <sebras@gmail.com>, 2016, 2022.
